# fcitx5-wps

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
